# thesis-ch8.3

./: README.md
source/catkin_ws/maps/: oru2.yaml  peis2.pgm  peis2.yaml  peis20.pgm  peis20.yaml  peis20edited.pgm  peis20edited_nav.pgm  peis4.pgm  peis4.yaml
source/catkin_ws/src/ie_uwb/: CMakeLists.txt  package.xml
source/catkin_ws/src/ie_uwb/config_files/: anchors_pos_on_map.yaml  anchors_pos_table.yaml  ipol_2_door.pgm  map_file.yaml  tags_config.yaml
source/catkin_ws/src/ie_uwb/launch/: uwb_pose_map.launch  uwb_pose_table.launch  uwb_raw_to_pose.launch  uwb_tag_BACK.launch
source/catkin_ws/src/ie_uwb/launch/mapping/: uwb_mapping.launch
source/catkin_ws/src/ie_uwb/src/: CoupleTrilateration.py  Uwb.py  Wifi_Uwb.py  amcl_server.py  driver.py  filter.py  uwb_anchor_finder.py  uwb_plotting.py  variance.py
source/catkin_ws/src/inst_aware_planner_pkg/: CMakeLists.txt  README  build.gradle  iwp_params.sh  package.xml  runnerInstitutions.sh  settings.gradle
source/catkin_ws/src/inst_aware_planner_pkg/config/: iwp_config.yaml
source/catkin_ws/src/inst_aware_planner_pkg/domains/: Guiding.ddl  Touring.ddl
source/catkin_ws/src/inst_aware_planner_pkg/inst_aware_planner/: .gitignore  build.gradle
source/catkin_ws/src/inst_aware_planner_pkg/launch/: activateInst.launch  iwp.launch  iwpExp2.launch  iwp_all.launch  iwp_all_g2.launch
source/catkin_ws/src/inst_aware_planner_pkg/scripts/: activateInst.py  testResultGuide.py  testResultTour.py
source/catkin_ws/src/monarch_behaviors/: CMakeLists.txt  package.xml  setup.py
source/catkin_ws/src/monarch_behaviors/action/: Abstract.action  CheckAreaClear.action  CheckGameAreaClear.action  CooperativePatrolling.action  DispatchCa.action  Dock.action  EscortPerson.action  FollowPerson.action  GetRfid.action  GoTo.action  GoToFormation.action  InteractionBehavior.action  InteractiveGame.action  Lead.action  Moving.action  Patrolling.action  TAQuiz.action
source/catkin_ws/src/monarch_behaviors/behavior_executors/: Escorting.py  Following.py  approach_person.py  catch_n_touch_behavior.py  catch_n_touch_behavior_sam.py  catch_n_touch_behavior_sam2.py  catch_n_touch_behavior_sam2_IW5.py  catch_n_touch_behaviorback_sam2.py  check_game_area.py  cooperativepatrolling.py  dispatch_ca.py  docking.py  getrfid_behavior.py  getrfid_behavior_sam.py  getrfid_behavior_sam_IW5.py  goto.py  gotoformation.py  idle.py  interaction_behavior_executor.py  joyful_warden.py  (+19 more)
source/catkin_ws/src/monarch_msgs/: CHANGELOG.txt  CMakeLists.txt  build_deb_package.sh  setup.py
source/catkin_ws/src/monarch_msgs/msg/: ArmsControl.msg  AuxiliaryBatteriesVoltage.msg  BatteriesVoltage.msg  BehaviorRequestLog.msg  BehaviorSelection.msg  BehaviorSelectionArray.msg  BumpersReadings.msg  CapacitiveSensorsReadings.msg  ChargerStatus.msg  EyesControl.msg  FourWheelOmniDelta.msg  GameGoal.msg  GameHriGoal.msg  GamePlayerStatus.msg  GameTurnSummary.msg  GaussianCostmap.msg  GaussianCostmapArray.msg  GestureExpression.msg  GroundSensorsReadings.msg  HardstopStatus.msg  HeadControl.msg  InteractionExecutorStatus.msg  KeyValuePair.msg  KeyValuePairArray.msg  LedControl.msg  MotorBoardCommunicationStatusReadings.msg  MotorBoardTemperatures.msg  MotorBoardVoltages.msg  MotorsCoolingFans.msg  MouthLedControl.msg  MouthPictureLedControl.msg  MouthStringLedControl.msg  MouthVumeterControl.msg  NonVerbalSound.msg  PersonFrontRobotArray.msg  PersonFrontofRobot.msg  PersonLocalizationTrackingData.msg  PersonLocalizationTrackingDataArray.msg  PersonLocalizationTrackingParticle.msg  PersonLocalizationTrackingParticleArray.msg  (+19 more)
source/catkin_ws/src/monarch_msgs/src/.svn/: all-wcprops  entries
source/catkin_ws/src/monarch_msgs/src/monarch_msgs_utils/: key_value_pairs.py
source/catkin_ws/src/monarch_msgs/src/test/.svn/: all-wcprops  entries
source/catkin_ws/src/monarch_msgs/src/test/.svn/text-base/: test_kvpa_utils.py.svn-base
source/catkin_ws/src/monarch_situational_awareness/: CMakeLists.txt  README  __init__.py  echo_slot  new_echo_slot  package.xml  setup.py  slot_writer_command_from_user_School  slot_writer_currentbehaviorresult  slot_writer_dispatchca_over  slot_writer_getrfid_over  slot_writer_lead_over  slot_writer_ta_over  thin_sam  thin_sam_tester.cpp  thin_sam_tester.py
source/catkin_ws/src/monarch_situational_awareness/config/: agent_names.yaml  agent_names.yaml~  default_group_hosts.yaml  robot_hosts.yaml  slot_config.yaml  slot_config.yaml~
source/catkin_ws/src/monarch_situational_awareness/launch/: thin_sam.launch
source/catkin_ws/src/monarch_situational_awareness/launch/.svn/: all-wcprops  entries
source/catkin_ws/src/monarch_situational_awareness/launch/.svn/text-base/: thin_sam.launch.svn-base
source/catkin_ws/src/monarch_situational_awareness/msg/: GroupPropertiesArray.msg  SlotPropertiesArray.msg
source/catkin_ws/src/monarch_situational_awareness/sam_helpers/: __init__.py  reader.h  reader.py  thin_sam.py  writer.h  writer.py
source/catkin_ws/src/monarch_situational_awareness/srv/: RemoveWriter.srv
source/catkin_ws/src/myjava_messages/: CMakeLists.txt  build.gradle  build.gradle~  package.xml  settings.gradle
source/catkin_ws/src/pepper_talk/: CMakeLists.txt  package.xml
source/documents/uwb_pi/: uwb_hardware_ist  uwb_readme
source/documents/uwb_pi/raspberrypi/: installation.txt
source/launch/: amcl.launch  launch_mbot.bash  launch_mbot_hri.bash  launch_mbot_nav.bash  launch_mcentral.bash  mbot.launch  mbot.launch~  mbot_hri.launch  mbot_nav.launch  mbot_nav.launch~  mbot_nav_IPOL.launch~  mbot_nav_gen.launch  mbot_navigation.launch  mbot_navigation.launch~  mbot_navigation_ipol.launch  mbot_navigation_ipol.launch~  mcentral.launch  setup_and_launch_mbot.bash  setup_and_launch_mcentral.bash  useful
source/scripts/: 99-mbot.rules  README.txt  blank_onboard_fix.sh  installKinect.sh  installLibraries.sh  installROSHydro.sh  install_HRI_startup  install_hri_interfaces_deps.sh  install_non-psi-openni2.sh  install_re2  joy_fix.sh  setupTouchScreen.sh  stage-release-hydro.HOWTO_PATCH  stage-release-hydro.bash  stage-release-hydro.patch
(+82 files in other folders)
